# Esame_ProgAvanzata

./: CMakeLists.txt  README.md  classMatrix.cpp  file.cl  main.cpp  main_test.cpp  matrici.cpp  matrici.hpp  matrix.hpp  opencl.cpp  opencl.hpp  opencl_processor.hpp  parallel_matrix.hpp  prova.hpp
